--- a/style.css
+++ b/style.css
@@ -1,44 +1,56 @@
 body{
- background-color: #EDEAE5;
+ background-color: #d6d4d4;
+ font-family: Arial, Helvetica, sans-serif;
+ margin: 10px 15px 10px 15px;
 }
+
 h1{
  font-size: 40px;
+ border: 1px solid #026560;
+ background-color: #026560;
+ padding: 20px;
+ color: white;
 }
+
 h2{
  font-size: 30px;
+ color
+ :#026670;
 }
-p{
- font-family: Arial, Helvetica, sans-serif;
+
+#lb, #pi{
+  color:#026670;
 }
-ol{
- font-family: Arial, Helvetica, sans-serif;
-}
+
 ul{
  list-style-type: square;
- font-family: Arial, Helvetica, sans-serif;
 }
+
 table, th, td {
- border: 1px solid;
- height: 40px;
- width: 20%;
- font-family: Arial, Helvetica, sans-serif;
+ height: 50px;
+ width: 30%;
+ border: 1px solid #026670;
 }
+
 th{
  height: 40px;
  text-align: center;
 }
+
 input[type=text] {
   width: 15%;
   padding: 10px 15px;
   margin: 10px 0;
   box-sizing: border-box;
 }
+
 input[type=email] {
   width: 15%;
   padding: 10px 15px;
   margin: 10px 0;
   box-sizing: border-box;
 }
+
 input[type=button], input[type=submit], input[type=reset] {
   background-color: #026670;
   border: none;
@@ -48,8 +60,9 @@ input[type=button], input[type=submit], input[type=reset] {
   margin: 4px 2px;
   cursor: pointer;
 }
+
 textarea{
- width: 30%;
+  width: 35%;
   height: 150px;
   padding: 16px 20px;
   box-sizing: border-box;
@@ -57,6 +70,7 @@ textarea{
   font-size: 16px;
   resize: none;
 }
+
 .button{
  color: #026670;
  padding: 14px 25px;
@@ -64,14 +78,31 @@ textarea{
  text-decoration: none;
  display: inline-block;
 }
+
 .button:link, .button:visited{
-  background-color: #026560;
+  background-color: #026670;
   color: white;
   padding: 14px 25px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
 }
+
 .button:hover, .button:active{
- background:color: #026670;
+ background-color: #012c30;
+}
+
+#tsp{
+  text-align: left;
+  background-color: #026670;
+  color: white;
+  text-align: center;
+}
+
+#school{
+  padding-left: 25px;
+}
+
+.bot{
+  padding-top: 30px;
 }
